cmd/aigw/testdata/translate_basic.out.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-ai-gateway-basic
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: envoy-ai-gateway-basic-openai
  namespace: default
spec:
  endpoints:
  - fqdn:
      hostname: api.openai.com
      port: 443
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: envoy-ai-gateway-basic-aws
  namespace: default
spec:
  endpoints:
  - fqdn:
      hostname: bedrock-runtime.us-east-1.amazonaws.com
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: envoy-ai-gateway-basic-openai-tls
  namespace: default
spec:
  targetRefs:
  - group: gateway.envoyproxy.io
    kind: Backend
    name: envoy-ai-gateway-basic-openai
  validation:
    hostname: api.openai.com
    wellKnownCACertificates: System
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: envoy-ai-gateway-basic-aws-tls
  namespace: default
spec:
  targetRefs:
  - group: gateway.envoyproxy.io
    kind: Backend
    name: envoy-ai-gateway-basic-aws
  validation:
    hostname: bedrock-runtime.us-east-1.amazonaws.com
    wellKnownCACertificates: System
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.envoyproxy.io/ai-gateway-generated: "true"
    gateway.envoyproxy.io/backend-ref-priority: 0:envoy-ai-gateway-basic-openai:0,1:envoy-ai-gateway-basic-aws:0,2:envoy-ai-gateway-basic-testupstream:0
  name: envoy-ai-gateway-basic
  namespace: default
  ownerReferences:
  - apiVersion: aigateway.envoyproxy.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: AIGatewayRoute
    name: envoy-ai-gateway-basic
    uid: ""
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-ai-gateway-basic
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: envoy-ai-gateway-basic-openai
    filters:
    - extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: ai-eg-host-rewrite-envoy-ai-gateway-basic
      type: ExtensionRef
    matches:
    - headers:
      - name: x-ai-eg-model
        type: Exact
        value: gpt-4o-mini
      path:
        value: /
    timeouts:
      request: 60s
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: envoy-ai-gateway-basic-aws
    filters:
    - extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: ai-eg-host-rewrite-envoy-ai-gateway-basic
      type: ExtensionRef
    matches:
    - headers:
      - name: x-ai-eg-model
        type: Exact
        value: llama3-2-1b-instruct-v1
      path:
        value: /
    timeouts:
      request: 60s
  - backendRefs:
    - kind: Service
      name: envoy-ai-gateway-basic-testupstream
      port: 80
    filters:
    - extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: ai-eg-host-rewrite-envoy-ai-gateway-basic
      type: ExtensionRef
    matches:
    - headers:
      - name: x-ai-eg-model
        type: Exact
        value: some-cool-self-hosted-model
      path:
        value: /
    timeouts:
      request: 60s
  - filters:
    - extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: ai-eg-route-not-found-response-envoy-ai-gateway-basic
      type: ExtensionRef
    matches:
    - path:
        value: /
    name: route-not-found
status:
  parents: null
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: ai-eg-host-rewrite-envoy-ai-gateway-basic
  namespace: default
  ownerReferences:
  - apiVersion: aigateway.envoyproxy.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: AIGatewayRoute
    name: envoy-ai-gateway-basic
    uid: ""
spec:
  urlRewrite:
    hostname:
      type: Backend
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: ai-eg-route-not-found-response-envoy-ai-gateway-basic
  namespace: default
  ownerReferences:
  - apiVersion: aigateway.envoyproxy.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: AIGatewayRoute
    name: envoy-ai-gateway-basic
    uid: ""
spec:
  directResponse:
    body:
      inline: No matching route found. It is likely because the model specified in
        your request is not configured in the Gateway.
      type: null
    statusCode: 404
---
apiVersion: v1
kind: Secret
metadata:
  name: envoy-ai-gateway-basic-default-21a9f8f801bd
stringData:
  index.yaml: |
    checksum: da43a0302479226041b7921fe35fce12ffffe5436cc016c3090eb1b2fa0a26fd
    parts:
    - name: envoy-ai-gateway-basic-default-21a9f8f801bd-part-000
      path: parts/000
      sizeBytes: 1211
    uuid: aigw-translate
    version: dev
---
apiVersion: v1
data:
  chunk: YmFja2VuZHM6Ci0gYWlTZXJ2aWNlQmFja2VuZE5hbWU6IGRlZmF1bHQvZW52b3ktYWktZ2F0ZXdheS1iYXNpYy1vcGVuYWkKICBhdXRoOgogICAgYXBpS2V5OgogICAgICBrZXk6IGFwaUtleQogIG1vZGVsTmFtZU92ZXJyaWRlOiAiIgogIG5hbWU6IGRlZmF1bHQvZW52b3ktYWktZ2F0ZXdheS1iYXNpYy1vcGVuYWkvcm91dGUvZW52b3ktYWktZ2F0ZXdheS1iYXNpYy9ydWxlLzAvcmVmLzAKICBzY2hlbWE6CiAgICBuYW1lOiBPcGVuQUkKICAgIHByZWZpeDogdjEKLSBhaVNlcnZpY2VCYWNrZW5kTmFtZTogZGVmYXVsdC9lbnZveS1haS1nYXRld2F5LWJhc2ljLWF3cwogIGF1dGg6CiAgICBhd3M6CiAgICAgIGNyZWRlbnRpYWxGaWxlTGl0ZXJhbDo [...]
kind: Secret
metadata:
  name: envoy-ai-gateway-basic-default-21a9f8f801bd-part-000
---
apiVersion: v1
kind: Secret
metadata:
  name: envoy-ai-gateway-basic-openai-apikey
  namespace: default
stringData:
  apiKey: apiKey
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  name: envoy-ai-gateway-basic-aws-credentials
  namespace: default
stringData:
  credentials: |
    [default]
    aws_access_key_id = AWS_ACCESS_KEY_ID
    aws_secret_access_key = AWS_SECRET_ACCESS_KEY
type: Opaque
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-ai-gateway-basic
  namespace: default
spec:
  gatewayClassName: envoy-ai-gateway-basic
  listeners:
  - name: http
    port: 8888
    protocol: HTTP
